force-app/main/default/objects/TA_Log__c/TA_Log__c.object-meta.xml
<CustomObject>
    <label>TA Log</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>TA Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TA Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>