force-app/main/default/objects/TA_Log__c/fields/Additional_TA_Provider__c.field-meta.xml
<CustomField>
    <fullName>Additional_TA_Provider__c</fullName>
    <label>Additional TA Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>