force-app/main/default/objects/TA_Log__c/fields/Flagged_for_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Flagged_for_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagged for Follow-Up</label>
    <type>Checkbox</type>
</CustomField>