force-app/main/default/objects/TA_Log__c/fields/Follow_Up_TA_Log__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_TA_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow-Up TA Log</label>
    <referenceTo>TA_Log__c</referenceTo>
    <relationshipLabel>TA Logs (Follow-Up TA Log)</relationshipLabel>
    <relationshipName>Follow_Up_TA_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>