force-app/main/default/objects/TA_Log__c/fields/Grantee_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Attendee__c</fullName>
    <label>Grantee Attendee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>