force-app/main/default/objects/TA_Log__c/fields/Is_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Is_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Follow Up?</label>
    <type>Checkbox</type>
</CustomField>