force-app/main/default/objects/TA_Log__c/fields/Original_TA_Log__c.field-meta.xml
<CustomField>
    <fullName>Original_TA_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original TA Log</label>
    <referenceTo>TA_Log__c</referenceTo>
    <relationshipLabel>TA Logs</relationshipLabel>
    <relationshipName>TA_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>