force-app/main/default/objects/TA_Log__c/fields/TA_By__c.field-meta.xml
<CustomField>
    <fullName>TA_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TA By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TA Logs</relationshipLabel>
    <relationshipName>TA_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>