force-app/main/default/objects/TA_Log__c/fields/TA_By_Name__c.field-meta.xml
<CustomField>
    <fullName>TA_By_Name__c</fullName>
    <formula>TA_By__r.FirstName + &apos; &apos; +  TA_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TA By Name</label>
    <type>Text</type>
</CustomField>