force-app/main/default/objects/TA_Log__c/fields/TA_By_old__c.field-meta.xml
<CustomField>
    <fullName>TA_By_old__c</fullName>
    <label>TA By (old)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>