force-app/main/default/objects/TA_Log__c/fields/TA_Byasdf__c.field-meta.xml
<CustomField>
    <fullName>TA_Byasdf__c</fullName>
    <label>TA By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>