force-app/main/default/objects/TA_Log__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Performance Measures Reporting</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Program Design</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Statement of Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>